syntax = "proto3";

package TW.Ethereum.Proto;
option java_package = "wallet.core.jni.proto";

message TransferContract {
    // Amount to send in wei (256-bit number)
    bytes amount = 1;
}

message ERC20TransferContract {
    string token_contract = 1;

    // Amount to send (256-bit number)
    bytes amount = 2;
}

message GenericContract {
    // Optional payload
    bytes payload = 1;
}

// Input data necessary to create a signed transaction.
message SigningInput {
    // Chain identifier (256-bit number)
    bytes chain_id = 1;

    // Nonce (256-bit number)
    bytes nonce = 2;

    // Gas price (256-bit number)
    bytes gas_price = 3;

    // Gas limit (256-bit number)
    bytes gas_limit = 4;

    // Recipient's address.
    string to_address = 5;

    // Private key.
    bytes private_key = 6;

    oneof contract_oneof {
        TransferContract contract_transfer = 11;
        ERC20TransferContract contract_erc20 = 12;
        GenericContract contract_generic = 13;
    }
}

// Transaction signing output.
message SigningOutput {
    // Signed and encoded transaction bytes.
    bytes encoded = 1;

    bytes v = 2;
    bytes r = 3;
    bytes s = 4;
}
